--- a/JavaScripBucles/index.html
+++ b/JavaScripBucles/index.html
@@ -16,5 +16,21 @@
     <body>
     <script src="./JS/01.js"></script>
     <script src="./JS/02.js"></script>
+    <script src="./JS/03.js"></script>
+    <script src="./JS/04.js"></script>
+    <script src="./JS/05.js"></script>
+    <script src="./JS/06.js"></script>
+    <script src="./JS/07.js"></script>
+    <script src="./JS/08.js"></script>
+    <script src="./JS/09.js"></script>
+    <script src="./JS/10.js"></script>
+    <script src="./JS/11.js"></script>
+    <script src="./JS/12.js"></script>
+    <script src="./JS/13.js"></script>
+    <script src="./JS/14.js"></script>
+    <script src="./JS/15.js"></script>
+    <script src="./JS/16.js"></script>
+    <script src="./JS/17.js"></script>
+   
     </body>
 </html>
